Overtime: Fixed z-index of tab bar.

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -196,6 +196,7 @@ body {
   position: fixed;
   bottom: 0;
   width: 100%;
+  z-index: 1;
   height: 47px;
   background-color: #fff;
 }
