--- a/components/Tabs/Tabs.less
+++ b/components/Tabs/Tabs.less
@@ -4,6 +4,7 @@
   .flex(center, center);
   .width-100();
   .sticky();
+  z-index: 1;
   height: 47px;
   background-color: @lambda-times-color-white;
   @media(min-width: 1280px){
